# dmcmake

./: CMakeLists.txt  README.md  build.bat
.github/workflows/: linux.yml  mac.yml  win.yml
cmake/: ModuleCompileOptions.cmake  ModuleImport.cmake
examples/dmcmake/: main.cpp
include/: dmcmake.h  dmcmake_config.h  dmcmake_config.h.in  dmos.h
src/dmcmake_module/: dmcmake_module.cpp  dmcmake_module.def  dmcmake_module.h
src/libdmcmake/: libdmcmake.def  libdmcmake_impl.cpp  libdmcmake_impl.h
test/dmcmaketest/: dmcmaketest.cpp
